Fixed navbar text wrapping

--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -63,7 +63,7 @@
     }
   }
 
-  @media (max-width: 1199px) {
+  @media (max-width: 1400px) {
     nav img {
       max-width: 155px !important;
     }
